<resources>
    <string name="app_name">Search Eat</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main_menu_navegacion">MainMenu_Navegacion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ordenar">Ordenar</string>
    <string name="abierto">Abierto</string>
    <string name="imagen_de_reserva">imagen de reserva</string>
    <string name="imagen_restaurante">iamgen restaurante</string>
    <string name="reserva">Reserva:</string>
    <string name="boton_para_puntuar1">boton para puntuar</string>
    <string name="boton_para_puntuar2">boton para puntuar</string>
    <string name="boton_para_puntuar3">boton para puntuar</string>
    <string name="boton_para_puntuar4">boton para puntuar</string>
    <string name="boton_para_puntuar5">boton para puntuar</string>
    <string name="boton_para_ir_al_maps">Boton para ir al maps</string>
    <string name="text_view_email">Correo</string>
    <string name="text_view_password">Contraseña</string>
    <string name="text_view_nombre">Nombre</string>
    <string name="text_view_num_tel">Número de teléfono</string>
    <string name="text_view_fecha">Fecha Reserva</string>
    <string name="text_view_numPersonas">Número Personas</string>
    <string name="text_view_hora">Hora Reserva</string>
    <string name="text_view_reservar">Reservar</string>
    <string name="text_view_nombre_restaurante">Nombre del Restaurante</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_signup">Registrarse</string>
    <string name="button_register">Registrarse</string>
    <string name="button_fecha">Sel. Fecha</string>
    <string name="button_hora">Sel. Hora</string>
    <string name="creadores">Creadores</string>
    <string name="carlos">Carlos Gomez Dominguez</string>
    <string name="ronald">Ronald Ortiz de Lazcano Casal</string>
    <string name="diego">Diego Gelinck Rodriguez</string>
    <string name="matt">Matthew Ayete Corrales</string>
    <string name="version_java">Version Java</string>
    <string name="num_version">Java VERSION_1_8</string>
    <string name="imagen_del_restaurante"></string>
    <string name="nombre_restaurante">Nombre del restaurante: </string>
    <string name="puntuacion"></string>
    <string name="direccion"></string>
    <string name="precio"></string>
    <string name="distancia"></string>
    <string name="perfil_num_tel">Número de teléfono</string>
    <string name="perfil_nom">Nombre</string>
    <string name="perfil_correo">Correo</string>
    <string name="cancelar_reserva">cancelar reserva</string>
</resources>