<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Granate_logo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nombrePerfil"
        android:layout_width="210dp"
        android:layout_height="58dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="167dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/perfil_nom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correoPerfil"
        android:layout_width="209dp"
        android:layout_height="57dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="243dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/perfil_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/telefonoPerfil"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="318dp"
        android:ems="10"
        android:hint="@string/perfil_num_tel"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPerfil"
        android:layout_width="409dp"
        android:layout_height="328dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="401dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>