<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/cardReserva"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:orientation="vertical"
        android:background="@color/Color_Secundario">

        <LinearLayout
            android:id="@+id/reserva_Local"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/Imagen_reserva"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagen_local"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/imagen_del_restaurante"
                    app:srcCompat="@drawable/ic_restaurant_black_24dp" />
            </LinearLayout>

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/mid1"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Nombre_Restaurante_Reserva"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nombre_restaurante"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mid3"
                android:layout_width="83dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="18dp" />

                <TextView
                    android:id="@+id/text_reserva"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="Valorar:" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Boton_de_valorar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/boton_valorar"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:contentDescription="@string/imagen_de_reserva"
                    app:srcCompat="@drawable/ic_stars_white_24dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Reserva_Cancelar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/fecha_personas"
                android:layout_width="371dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombre_reserva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/telefono_reserva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/numero_personas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/distancia" />

                <TextView
                    android:id="@+id/fecha_reserva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/precio" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_eliminar"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/boton_eliminar_reserva"
                    android:layout_width="68dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_btn"
                    android:contentDescription="@string/boton_para_ir_al_maps"
                    app:srcCompat="@drawable/ic_cancel_white_48dp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>