<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_Reserva"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color_Fondo"
    tools:context=".Vista.ReservaActivity">

    <TextView
        android:id="@+id/textView_NombreRest_Reserva"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeTextType = "uniform"
        app:autoSizePresetSizes = "@array/autosize_text_sizes"
        app:layout_constraintBottom_toTopOf="@+id/imageView_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombreApellidos_Reserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_NombreRest_Reserva"
        app:srcCompat="@drawable/ic_restaurant_black_24dp" />

    <TextView
        android:id="@+id/editTextNombreApellidos_Reserva"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="11dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeTextType = "uniform"
        app:autoSizePresetSizes = "@array/autosize_text_sizes"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumTel_Reserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_avatar" />

    <TextView
        android:id="@+id/editTextNumTel_Reserva"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeTextType = "uniform"
        app:autoSizePresetSizes = "@array/autosize_text_sizes"
        app:layout_constraintBottom_toTopOf="@+id/textView_numPersonas_Reserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreApellidos_Reserva" />

    <Button
        android:id="@+id/button_fecha_Reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_rounded"
        android:text="@string/button_fecha"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_fecha_Reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_fecha_Reserva" />

    <Button
        android:id="@+id/button_hora_Reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_rounded"
        android:onClick="popTimePicker"
        android:text="@string/button_hora"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_hora_Reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hora_Reserva" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_numPersonas_Reserva" />

    <TextView
        android:id="@+id/textView_numPersonas_Reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_view_numPersonas"
        android:textColor="@color/white"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumTel_Reserva" />

    <Button
        android:id="@+id/button_reservar_Reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_rounded_reservar"
        android:onClick="Reservar"
        android:text="@string/text_view_reservar"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>